adding sample route change animations

--- a/starter-app/app/app.component.html
+++ b/starter-app/app/app.component.html
@@ -10,4 +10,6 @@
     <a [routerLink]="['Step2']">Step 2</a>
   </li>
 </ul>
-<router-outlet></router-outlet>
+<div class="step-view">
+  <router-outlet></router-outlet>
+</div>
