--- a/starter-app/styles.css
+++ b/starter-app/styles.css
@@ -1,13 +1,60 @@
 h1 {
   color: #369;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
 body {
   margin: 2em;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
  /*
   * See https://github.com/angular/angular.io/blob/master/public/docs/_examples/styles.css
   * for the full set of master styles used by the documentation samples
   */
+
+
+
+/* Common step styles, as of this angular version, only ng-enter works */
+.step-view {
+  position: relative;
+}
+
+.step {
+  display: inline-block;
+  width: 300px;
+  height: 300px;
+  background: #369;
+  text-align: center;
+  color: white;
+}
+
+.step-container {
+  -webkit-transition: all ease-in 0.5s;
+  transition: all ease-in 0.5s;
+}
+
+.step-container.ng-enter {
+  left: 100%;
+  position: absolute;
+}
+
+.step-container.ng-enter-active {
+  left: 0;
+}
+
+/* :host selectors appear not to be working for me */
+/*
+:host(.step-container) {
+  -webkit-transition: all ease-in 10s;
+  transition: all ease-in 10s;
+}
+
+:host(.step-container.ng-enter) {
+  position: fixed;
+  transform: rotateX(-180deg);
+}
+
+:host(.step-container.ng-enter-active) {
+  transform: rotateX(0deg);
+}
+*/
